# grow

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: config.py  costs.py  db.py  events.py  guard.py  main.py
backend/app/ai/: __init__.py  gemini_provider.py  mock_provider.py  provider.py
backend/app/domain/: __init__.py  dto.py  models.py  state_machine.py
backend/app/jobs/: __init__.py  execute.py  intake.py  knowledge_ci.py  orchestrate.py  queue.py  registry.py  review.py
backend/app/repo/: __init__.py  ai_jobs.py  artifacts.py  chat.py  comments.py  knowledge.py  rules.py  stats.py  tasks.py
backend/app/routers/: __init__.py  ai.py  artifacts.py  board.py  chat.py  comments.py  events.py  internal_demo.py  internal_jobs.py  internal_knowledge.py  jobs.py  rules.py  (+4 more)
backend/db/: schema.sql  seed.sql
backend/tests/: conftest.py  helpers.py  test_agent_roles.py  test_ai_provider.py  test_artifacts_api.py  test_assign_ai.py  test_autonomy.py  test_board_api.py  test_breakdown_confirm.py  test_chat_api.py  test_costs.py  test_dlp_scanner.py  test_domain.py  test_events_api.py  test_execute_job.py  test_gemini_provider.py  test_guard.py  test_healthz.py  test_intake_job.py  test_internal_jobs_token.py  test_job_registry.py  test_jobs_queue.py  test_knowledge_ci.py  test_learn_api.py  test_orchestrate.py  test_promote_dlp.py  test_retrieval.py  test_review_job.py  test_rules_api.py  test_schema.py  test_stats_api.py  test_trace_api.py  test_trust_graduation.py  test_write_guard.py
(+131 files in other folders)
